# GenerativeAI

./: .gitignore
RAG/hello_llms/: chain.py  experiments_runnable.ipynb  main.py  pyproject.toml
RAG/hello_llms/rag-learning-gcp/: documents_document_loaders.ipynb  main.py  prompts_models_structured_output.ipynb  pyproject.toml  utils.py
RAG/hello_llms/rag-learning-gcp/data/: intro.txt  sample.csv
RAG/hello_llms/rag-learning-gcp/data/text/: 01_code_of_conduct.txt  02_leave_policy.txt  03_anti_harassment_policy.txt  04_remote_work_policy.txt  05_performance_management_policy.txt  06_data_privacy_policy.txt  07_recruitment_policy.txt  08_compensation_benefits_policy.txt  09_health_safety_policy.txt  10_disciplinary_grievance_policy.txt
rag_project_experiments/: extract.py  image_experimnet_caption.py  main.py  pyproject.toml  utils.py
